--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
-body {
-  height: 1100px;
+#parent {
+  height: 100%;
 }
 #navbar {
   height: 70px;
@@ -21,20 +21,18 @@ body {
   left: 0;
 }
 #device {
-  width: 18%;
+  width: 17%;
   display: flex;
   justify-content: space-around;
   margin-right: 100px;
 }
-#device > img:nth-child(1) {
-  background-color: #c9e4f9;
+#img1 {
+  height: 40px;
+  width: 40px;
+  padding: 5px;
 }
-.close:hover {
-  background-color: #c9e4f9;
-  cursor: pointer;
-}
-#device img:hover {
-  background-color: #c9e4f9;
+#img1:hover {
+  background-color: #dcf0ff;
   cursor: pointer;
 }
 #nav {
@@ -57,33 +55,41 @@ body {
   align-items: center;
   font-size: 25px;
 }
+#applogo i:nth-child(1) {
+  cursor: pointer;
+}
 #applogo i:nth-child(2) {
   font-size: 25px;
   color: #3b5998;
+  cursor: pointer;
 }
 #applogo i:nth-child(3) {
   font-size: 25px;
   color: #55acee;
+  cursor: pointer;
 }
 #applogo i:nth-child(4) {
   font-size: 25px;
   color: #c536a4;
+  cursor: pointer;
 }
 #cookies {
   height: 140px;
   width: 350px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   background-color: #2c2624;
   border-radius: 5px;
   color: white;
   position: fixed;
   bottom: 30px;
   left: 30px;
-  font-size: 14px;
+  font-size: 13px;
+  opacity: 0.9;
 }
 #cookies a {
   color: white;
   text-decoration-color: white;
+  font-size: 13px;
 }
 #cookies button {
   background-color: #4993e8;
@@ -101,15 +107,17 @@ body {
   color: black;
   cursor: pointer;
 }
-#cookies2{
-    height: 65px;
-    width: 70px;
-    background-color: white;
-    position: fixed;
-    bottom: 15px;
-    right: 0px;
-    text-align: center;
-    padding-top: 5px;
+#cookies2 {
+  height: 60px;
+  width: 70px;
+  background-color: white;
+  position: fixed;
+  bottom: 15px;
+  right: 0px;
+  text-align: center;
+  padding-top: 5px;
+  border-radius: 3px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 #main {
   height: 800px;
@@ -130,7 +138,214 @@ body {
   width: 600px;
   background-color: white;
   padding: 60px 0px 0px 30px;
-position: relative;
-top: 55px;
-right: 90px;
+  position: relative;
+  top: 55px;
+  right: 90px;
+  box-shadow: rgba(0, 0, 0, 0.7) 0px 5px 15px;
+}
+#interior {
+  height: 1000px;
+  width: 100%;
+  /* border: 2px solid black; */
+  margin-top: 60px;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+#interior1 {
+  height: 600px;
+  width: 40%;
+  background-image: url("https://images01.nicepagecdn.com/c461c07a441a5d220e8feb1a/73196f530b0d5473be31e0b9/gggg.jpg");
+  background-size: cover;
+  /* border: 1px solid red; */
+  margin-left: 70px;
+}
+#interior2 {
+  height: 600px;
+  width: 40%;
+  /* border: 1px solid green; */
+  margin-right: 70px;
+}
+#interior21 {
+  height: 450px;
+  width: 400px;
+  background-image: url("https://images03.nicepagecdn.com/c461c07a441a5d220e8feb1a/f82f15087c19565f99555fe5/texture-min.png");
+  background-repeat: repeat;
+  margin-left: 150px;
+}
+#interior211 {
+  height: 450px;
+  width: 450px;
+  background-image: url("https://images01.nicepagecdn.com/c461c07a441a5d220e8feb1a/d55ac6f33a275ea2b9ba06e9/g.jpg");
+  background-size: cover;
+  border-radius: 50%;
+  position: relative;
+  top: 50px;
+  right: 160px;
+}
+#interior3 {
+  height: 450px;
+  width: 40%;
+  /* border: 1px solid purple; */
+  margin-left: 70px;
+  padding-top: 20px;
+}
+#interior3 p,
+a {
+  padding-top: 25px;
+  font-size: 18px;
+  color: #6b6767;
+  text-decoration-color: #6b6767;
+}
+#interior4 {
+  height: 450px;
+  width: 40%;
+  /* border: 1px solid red; */
+  margin-right: 70px;
+}
+#interior4 p {
+  font-size: 18px;
+  color: #353434;
+  text-align: left;
+  padding-top: 50px;
+}
+#learnMore {
+  height: 50px;
+  width: 37%;
+  font-weight: bolder;
+  border: 2px solid #909e6c;
+  text-align: center;
+  padding-top: 15px;
+  font-size: 18px;
+  margin-top: 30px;
+}
+#freshlooks {
+  height: 750px;
+  /* border: 1px solid black; */
+}
+#freshlooksoutdiv {
+  height: 240px;
+  width: 85%;
+  margin: auto;
+  /* border: 1px solid blue; */
+  display: flex;
+  margin-top: 90px;
+}
+#number {
+  height: 180px;
+  width: 16%;
+  /* border: 1px solid red; */
+  color: white;
+  background-color: #6a7c3e;
+  text-align: center;
+  padding-top: 50px;
+}
+#freshlooksoutdiv h1 {
+  font-size: 48px;
+  margin-left: 60px;
+}
+#images {
+  height: 370px;
+  width: 85%;
+  margin: auto;
+  /* border: 1px solid green; */
+  display: flex;
+  justify-content: space-between;
+}
+#freshlooks img {
+  height: 370px;
+  width: 370px;
+}
+#Latestprojects {
+  height: 850px;
+  width: 85%;
+  margin: auto;
+  /* border: 1px solid red; */
+}
+#LatestprojectText {
+  height: 130px;
+  width: 100%;
+  /* border: 1px solid blue; */
+  text-align: center;
+}
+#wrapImages {
+  height: 650px;
+  /* border: 1px solid black; */
+  display: flex;
+ justify-content: space-between;
+}
+#wrapimage1 {
+  height: 620px;
+  width: 49%;
+  /* border: 1px solid green; */
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+
+}
+#wrapimage2 {
+  height: 620px;
+  width: 49%;
+  /* border: 1px solid green; */
+  display: flex;
+  flex-direction: column;
+}
+#wrapimage11 {
+  height: 200px;
+  width: 45%;
+  /* border: 1px solid green; */
+  margin-bottom: 35px;
+  background-image: url("https://images01.nicepagecdn.com/67/6b/676b13d38454f01eafb6d8d873761e17.jpeg");
+  background-size: cover;
+  background-position: 0%;
+}
+#wrapimage12 {
+  height: 400px;
+  width: 100%;
+  /* border: 1px solid green; */
+  background-image: url("https://images01.nicepagecdn.com/d3/0e/d30ef3549739acd770d4fe2643ec3ded.jpeg");
+  background-size: cover;
+  background-position: 0%;
+
+}
+#wrapimage22 {
+  height: 200px;
+  width: 45%;
+  /* border: 1px solid green; */
+  background-image: url("https://images01.nicepagecdn.com/af/d3/afd377e224603dfabddc6e7d688b1eb8.jpeg");
+  background-size: cover;
+  background-position: 0%;
+}
+#wrapimage21 {
+  height: 400px;
+  width: 100%;
+  /* border: 1px solid green; */
+  margin-bottom: 35px;
+  background-image: url("https://images03.nicepagecdn.com/c461c07a441a5d220e8feb1a/62b5fd1f937050ef8bd0a63d/51e9d44b4856b108f5d08460962934761237d6ed5a4c704c72297bd2914bcd5a_1280.jpg");
+  background-size: cover;
+  background-position: 0%;
+}
+#freshlooksoutdiv2 {
+  height: 240px;
+  width: 85%;
+  margin: auto;
+  /* border: 1px solid blue; */
+  display: flex;
+  justify-content: space-between;
+}
+#end{
+  height: 800px;
+  width: 100%;
+  border: 1px solid black;
+}
+#child1{
+  height: 230px;
+  width: 100%;
+  background-color: #cad1b6;
+  margin-top: 100px;
+}
+#child2{
+  height: 650px;
+  width: 500px;
+  border: 1px solid red;
 }
