--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@
   left: 30px;
   font-size: 13px;
   opacity: 0.9;
+  z-index: 1;
 }
 #cookies a {
   color: white;
@@ -120,102 +121,89 @@
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 #main {
-  height: 800px;
-  background-image: url("https://assets.nicepagecdn.com/d2cc3eaa/16689/images/stylish-scandinavian-living-room-with-design-mint-sofa-furnitures-mock-up-poster-map-plants-eleg444.jpg");
-  background-size: cover;
+  height: 840px;
   width: 100%;
-  display: flex;
-  justify-content: end;
+  /* border: 2px solid black; */
+  display: grid;
+  grid-template-columns: repeat(13, 103.5px);
+  grid-template-rows: repeat(14, 60px);
 }
 #main1 {
-  height: 470px;
-  width: 570px;
-  background-color: #b4bd9b;
-  margin: 150px 150px 20px 30px;
+  background-image: url("https://assets.nicepagecdn.com/d2cc3eaa/16689/images/stylish-scandinavian-living-room-with-design-mint-sofa-furnitures-mock-up-poster-map-plants-eleg444.jpg");
+  background-size: cover;
+  grid-column: 1/15;
+  grid-row: 1/15;
+}
+#main3 {
+  background-color: white;
+  grid-column: 6/12;
+  grid-row: 5/11;
+  padding: 60px 0px 0px 30px;
+  box-shadow: rgba(0, 0, 0, 0.7) 0px 5px 15px;
 }
 #main2 {
-  height: 360px;
-  width: 600px;
-  background-color: white;
-  padding: 60px 0px 0px 30px;
-  position: relative;
-  top: 55px;
-  right: 90px;
-  box-shadow: rgba(0, 0, 0, 0.7) 0px 5px 15px;
+  background-color: #b4bd9b;
+  grid-column: 7/13;
+  grid-row: 4/12;
 }
 #interior {
   height: 1000px;
   width: 100%;
   /* border: 2px solid black; */
   margin-top: 60px;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(12, 100px);
+  grid-template-rows: repeat(10, 100px);
 }
 #interior1 {
-  height: 600px;
-  width: 40%;
   background-image: url("https://images01.nicepagecdn.com/c461c07a441a5d220e8feb1a/73196f530b0d5473be31e0b9/gggg.jpg");
   background-size: cover;
-  /* border: 1px solid red; */
-  margin-left: 70px;
+  grid-column: 2/7;
+  grid-row: 1/7;
 }
 #interior2 {
-  height: 600px;
-  width: 40%;
-  /* border: 1px solid green; */
-  margin-right: 70px;
-}
-#interior21 {
-  height: 450px;
-  width: 400px;
-  background-image: url("https://images03.nicepagecdn.com/c461c07a441a5d220e8feb1a/f82f15087c19565f99555fe5/texture-min.png");
-  background-repeat: repeat;
-  margin-left: 150px;
-}
-#interior211 {
-  height: 450px;
-  width: 450px;
   background-image: url("https://images01.nicepagecdn.com/c461c07a441a5d220e8feb1a/d55ac6f33a275ea2b9ba06e9/g.jpg");
   background-size: cover;
   border-radius: 50%;
-  position: relative;
-  top: 50px;
-  right: 160px;
+  margin: 0px 0px 50px 50px;
+  grid-column: 7/12;
+  grid-row: 2/7;
 }
 #interior3 {
-  height: 450px;
-  width: 40%;
-  /* border: 1px solid purple; */
-  margin-left: 70px;
-  padding-top: 20px;
-}
-#interior3 p,
-a {
-  padding-top: 25px;
-  font-size: 18px;
-  color: #6b6767;
-  text-decoration-color: #6b6767;
+  background-image: url("https://images03.nicepagecdn.com/c461c07a441a5d220e8feb1a/f82f15087c19565f99555fe5/texture-min.png");
+  background-repeat: repeat;
+  grid-column: 9/13;
+  grid-row: 1/6;
 }
 #interior4 {
-  height: 450px;
-  width: 40%;
-  /* border: 1px solid red; */
-  margin-right: 70px;
+  grid-column: 2/7;
+  grid-row: 7/13;
 }
-#interior4 p {
-  font-size: 18px;
+#interior5 {
+  grid-column: 8/13;
+  grid-row: 7/13;
+}
+#interior4 p,
+a {
+  font-size: 20px;
+  color: #353434;
+  text-decoration-color: #6b6767;
+  margin-top: 25px;
+}
+#interior5 p {
+  font-size: 20px;
   color: #353434;
   text-align: left;
   padding-top: 50px;
 }
 #learnMore {
-  height: 50px;
+  height: 45px;
   width: 37%;
   font-weight: bolder;
   border: 2px solid #909e6c;
-  text-align: center;
-  padding-top: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 18px;
   margin-top: 30px;
 }
@@ -269,59 +257,38 @@ a {
   text-align: center;
 }
 #wrapImages {
-  height: 650px;
-  /* border: 1px solid black; */
-  display: flex;
- justify-content: space-between;
+  height: 630px;
+  /* border: 3px solid black; */
+  display: grid;
+  grid-template-columns: repeat(11, 100px);
+  grid-template-rows: repeat(5, 100px);
+  grid-gap: 30px;
 }
 #wrapimage1 {
-  height: 620px;
-  width: 49%;
-  /* border: 1px solid green; */
-  display: flex;
-  flex-direction: column;
-  align-items: end;
-
-}
-#wrapimage2 {
-  height: 620px;
-  width: 49%;
-  /* border: 1px solid green; */
-  display: flex;
-  flex-direction: column;
-}
-#wrapimage11 {
-  height: 200px;
-  width: 45%;
-  /* border: 1px solid green; */
-  margin-bottom: 35px;
+  grid-column: 3/5;
+  grid-row: 1/3;
   background-image: url("https://images01.nicepagecdn.com/67/6b/676b13d38454f01eafb6d8d873761e17.jpeg");
   background-size: cover;
   background-position: 0%;
 }
-#wrapimage12 {
-  height: 400px;
-  width: 100%;
-  /* border: 1px solid green; */
+#wrapimage2 {
+  grid-column: 1/5;
+  grid-row: 3/6;
   background-image: url("https://images01.nicepagecdn.com/d3/0e/d30ef3549739acd770d4fe2643ec3ded.jpeg");
   background-size: cover;
   background-position: 0%;
-
 }
-#wrapimage22 {
-  height: 200px;
-  width: 45%;
-  /* border: 1px solid green; */
-  background-image: url("https://images01.nicepagecdn.com/af/d3/afd377e224603dfabddc6e7d688b1eb8.jpeg");
+#wrapimage3 {
+  grid-column: 5/10;
+  grid-row: 1/4;
+  background-image: url("https://images03.nicepagecdn.com/c461c07a441a5d220e8feb1a/62b5fd1f937050ef8bd0a63d/51e9d44b4856b108f5d08460962934761237d6ed5a4c704c72297bd2914bcd5a_1280.jpg");
   background-size: cover;
   background-position: 0%;
 }
-#wrapimage21 {
-  height: 400px;
-  width: 100%;
-  /* border: 1px solid green; */
-  margin-bottom: 35px;
-  background-image: url("https://images03.nicepagecdn.com/c461c07a441a5d220e8feb1a/62b5fd1f937050ef8bd0a63d/51e9d44b4856b108f5d08460962934761237d6ed5a4c704c72297bd2914bcd5a_1280.jpg");
+#wrapimage4 {
+  grid-column: 5/7;
+  grid-row: 4/6;
+  background-image: url("https://images01.nicepagecdn.com/af/d3/afd377e224603dfabddc6e7d688b1eb8.jpeg");
   background-size: cover;
   background-position: 0%;
 }
@@ -333,19 +300,136 @@ a {
   display: flex;
   justify-content: space-between;
 }
-#end{
-  height: 800px;
+#contactpart {
+  height: 705px;
   width: 100%;
-  border: 1px solid black;
+  /* border: 1px solid black; */
+  display: grid;
+  grid-template-columns: repeat(10, 99px);
+  grid-template-rows: repeat(8, 100px);
 }
-#child1{
-  height: 230px;
-  width: 100%;
+.contactpartone {
   background-color: #cad1b6;
-  margin-top: 100px;
+  /* border: 2px solid green; */
+  grid-column: 1/14;
+  grid-row: 3/5;
+  z-index: -1;
 }
-#child2{
-  height: 650px;
-  width: 500px;
-  border: 1px solid red;
+.contactparttwo {
+  background-color: blue;
+  /* border: 2px solid green; */
+  background-image: url("https://assets.nicepagecdn.com/d2cc3eaa/16689/images/painting-hanging-shelf-full-cacti-succulents_53876-110301.jpg");
+  background-size: cover;
+  grid-column: 7/12;
+  grid-row: 1/8;
+  z-index: -1;
+}
+.contactpartthree {
+  background-color: white;
+  /* border: 2px solid green; */
+  grid-column: 3/8;
+  grid-row: 2/7;
+  z-index: -1;
+  box-shadow: rgba(0, 0, 0, 0.9) 0px 5px 15px;
+}
+#contactUs {
+  height: 80%;
+  width: 85%;
+  margin: auto;
+  /* border: 2px solid black; */
+  margin-top: 50px;
+  text-align: center;
+}
+#contactUs > form > input {
+  width: 100%;
+  /* border: 2px solid black; */
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  height: 60px;
+  font-size: 16px;
+  padding: 30px 0px 20px 10px;
+  border-radius: none;
+  outline: none;
+}
+#contactUs > form > button {
+  width: 100%;
+  height: 50px;
+  border: none;
+  background-color: #6b7e3c;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
+#contactUs > form > button:hover {
+  cursor: pointer;
+  background-color: black;
+}
+#contactparttext {
+  height: 150px;
+  width: 100%;
+  text-align: center;
+  /* border: 1px solid blue; */
+  padding-top: 60px;
+}
+#footer {
+  height: 285px;
+  width: 100%;
+  background-color: #333333;
+  display: flex;
+  justify-content: space-around;
+  color: white;
+}
+.footer1 {
+  width: 25%;
+  /* border: 1px solid white; */
+  padding-top: 100px;
+  margin-left: 40px;
+}
+.footer1 p {
+  padding-bottom: 10px;
+  font-size: 18px;
+}
+.footer1 i {
+  color: white;
+  cursor: pointer;
+  margin-right: 10px;
+}
+#page:hover {
+  cursor: pointer;
+  opacity: 0.5;
+}
+.footer2 {
+  height: 50%;
+  width: 12%;
+  /* border: 1px solid white; */
+  margin-top: 50px;
+  margin-right: 80px;
+}
+.footer2 p {
+  padding-bottom: 8px;
+  font-size: 16px;
+}
+.footer2 p:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+#footerend {
+  height: 100px;
+  background-color: #333333;
+  color: white;
+  text-align: center;
+  font-size: 12px;
+  padding-top: 50px;
+  padding-right: 80px;
+}
+#footerend a {
+  color: white;
+  font-size: 12px;
+  text-decoration-color: white;
+}
+#footerend a:hover {
+  text-decoration: none;
+  opacity: 0.6;
 }
