--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@
   align-items: center;
   font-size: 25px;
 }
-#bars{
+#bars {
   cursor: pointer;
   font-size: 25px;
   display: none;
@@ -123,7 +123,7 @@
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   transition-duration: 0.3s;
 }
-#cookies2:hover{
+#cookies2:hover {
   width: 250px;
   display: flex;
   justify-content: space-around;
@@ -153,6 +153,9 @@
   background-color: #b4bd9b;
   grid-column: 7/13;
   grid-row: 4/12;
+}
+.maintext{
+font-size: 60px;
 }
 #interior {
   height: 1000px;
@@ -198,6 +201,9 @@ a {
   text-decoration-color: #6b6767;
   margin-top: 25px;
 }
+#interior4 h1{
+  font-size: 48px;
+}
 #interior5 p {
   font-size: 20px;
   color: #353434;
@@ -213,29 +219,30 @@ a {
   text-align: center;
   margin-top: 30px;
 }
-#learnMore:hover{
+#learnMore:hover {
   background-color: #4d5a2f;
   color: white;
   cursor: pointer;
 }
-#learnMore a:hover{
-color: white;
+#learnMore a:hover {
+  color: white;
 }
 #freshlooks {
-  height: 750px;
+  /* height:750px; */
   /* border: 1px solid black; */
-}
-#freshlooksoutdiv {
-  height: 240px;
   width: 85%;
   margin: auto;
+}
+#freshlooksoutdiv {
+  /* height: 240px; */
   /* border: 1px solid blue; */
   display: flex;
   margin-top: 90px;
+  margin-bottom: 50px;
 }
 #number {
-  height: 180px;
-  width: 35%;
+  height: 190px;
+  width: 30%;
   /* border: 1px solid red; */
   color: white;
   background-color: #6a7c3e;
@@ -243,81 +250,156 @@ color: white;
   padding-top: 50px;
 }
 #freshlooksoutdiv h1 {
-  font-size: 50px;
+  font-size: 52px;
   margin-left: 60px;
 }
 #images {
-  height: 370px;
-  width: 85%;
-  margin: auto;
   /* border: 1px solid green; */
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
-#freshlooks img {
+#image1 {
   height: 370px;
-  width: 370px;
-  cursor: pointer;
+  width: 32%;
+  /* border: 1px solid purple; */
+  background-image: url("https://assets.nicepagecdn.com/d2cc3eaa/16689/images/5646.jpg");
+  background-size: cover;
+  background-position: 0%;
+}
+#image2 {
+  height: 370px;
+  width: 33%;
+  /* border: 1px solid purple; */
+  background-image: url("https://assets.nicepagecdn.com/d2cc3eaa/16689/images/pexels-cup-of-couple-6633450.jpg");
+  background-size: cover;
+  background-position: 0%;
+}
+#image3 {
+  height: 370px;
+  width: 33%;
+  /* border: 1px solid purple; */
+  background-image: url("https://assets.nicepagecdn.com/d2cc3eaa/16689/images/56456.jpg");
+  background-size: cover;
+  background-position: 0%;
 }
 #Latestprojects {
-  height: 850px;
   width: 85%;
   margin: auto;
   /* border: 1px solid red; */
 }
 #LatestprojectText {
   height: 130px;
-  width: 100%;
   /* border: 1px solid blue; */
   text-align: center;
+  margin-top: 90px;
 }
 #wrapImages {
-  height: 630px;
   /* border: 3px solid black; */
-  display: grid;
-  grid-template-columns: repeat(11, 100px);
-  grid-template-rows: repeat(5, 100px);
-  grid-gap: 30px;
+  display: flex;
+}
+#wrapImage1 {
+  /* border: 1px solid red; */
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  margin-right: 25px;
+}
+#wrapImage2 {
+  /* border: 1px solid red; */
+  width: 50%;
+}
+.wrapImage11 {
+  /* border: 2px solid pink; */
+  width: 100%;
+  display: flex;
+  margin-bottom: 25px;
+}
+.wrapImage21 {
+  /* border: 2px solid pink; */
+  width: 100%;
+  display: flex;
+  margin-top: 25px;
 }
 #wrapimage1 {
-  grid-column: 3/5;
-  grid-row: 1/3;
+  visibility: hidden;
+  /* border: 1px solid green; */
+  height: 200px;
+  width: 50%;
+}
+#wrapimage2 {
+  /* border: 1px solid green; */
+  height: 200px;
+  width: 50%;
   background-image: url("https://images01.nicepagecdn.com/67/6b/676b13d38454f01eafb6d8d873761e17.jpeg");
   background-size: cover;
   background-position: 0%;
 }
-#wrapimage2 {
-  grid-column: 1/5;
-  grid-row: 3/6;
+#wrapimage3 {
+  /* border: 1px solid green; */
+  height: 400px;
+  width: 100%;
   background-image: url("https://images01.nicepagecdn.com/d3/0e/d30ef3549739acd770d4fe2643ec3ded.jpeg");
   background-size: cover;
   background-position: 0%;
 }
-#wrapimage3 {
-  grid-column: 5/10;
-  grid-row: 1/4;
+#wrapimage4 {
+  /* border: 1px solid green; */
+  height: 400px;
+  width: 100%;
   background-image: url("https://images03.nicepagecdn.com/c461c07a441a5d220e8feb1a/62b5fd1f937050ef8bd0a63d/51e9d44b4856b108f5d08460962934761237d6ed5a4c704c72297bd2914bcd5a_1280.jpg");
   background-size: cover;
   background-position: 0%;
 }
-#wrapimage4 {
-  grid-column: 5/7;
-  grid-row: 4/6;
+#wrapimage5 {
+  /* border: 1px solid green; */
+  height: 200px;
+  width: 50%;
   background-image: url("https://images01.nicepagecdn.com/af/d3/afd377e224603dfabddc6e7d688b1eb8.jpeg");
   background-size: cover;
   background-position: 0%;
 }
+#wrapimage6 {
+  visibility: hidden;
+
+  /* border: 1px solid green; */
+  height: 200px;
+  width: 50%;
+}
 #freshlooksoutdiv2 {
-  height: 240px;
-  width: 85%;
-  margin: auto;
+  /* height: 240px; */
   /* border: 1px solid blue; */
   display: flex;
-  justify-content: space-between;
+  margin-top: 90px;
+  margin-bottom: 50px;
 }
-#freshlooksoutdiv2 h1 {
-  font-size: 48px;
+#freshlooksoutdiv2 h1{
+  font-size: 55px;
+  margin-right: 20px;
+}
+#image11 {
+  height: 370px;
+  width: 32%;
+  /* border: 1px solid purple; */
+  background-image: url("https://assets.nicepagecdn.com/d2cc3eaa/16689/images/pexels-marina-podrez-12744083.jpg");
+  background-size: cover;
+  background-position: 0%;
+}
+#image12 {
+  height: 370px;
+  width: 33%;
+  /* border: 1px solid purple; */
+  background-image: url("https://assets.nicepagecdn.com/d2cc3eaa/16689/images/medium-shot-woman-holding-vase6.jpg");
+  background-size: cover;
+  background-position: 0%;
+}
+#image13 {
+  height: 370px;
+  width: 33%;
+  /* border: 1px solid purple; */
+  background-image: url("https://assets.nicepagecdn.com/d2cc3eaa/16689/images/64564.jpg");
+  background-size: cover;
+  background-position: 0%;
 }
 #contactpart {
   height: 705px;
@@ -371,7 +453,7 @@ color: white;
   border-radius: none;
   outline: none;
 }
-#contactUs > form >button {
+#contactUs > form > button {
   width: 100%;
   height: 50px;
   border: none;
@@ -452,62 +534,101 @@ button:hover {
   text-decoration: none;
   opacity: 0.6;
 }
-@media screen and (max-width:1115px) {
-  #bars{
-  cursor: pointer;
-  font-size: 25px;
-  display: inline;
-}
-#applogo>i:nth-child(1){
-  display: none;
-}
-#main3 {
-  grid-column: 5/10;
-  grid-row: 4/10;
-}
-#main2 {
-  grid-column: 6/11;
-  grid-row: 3/11;
-}
-#interior1 {
-  grid-column: 2/6;
-  grid-row: 1/6;
-}
-#interior2 {
-  grid-column: 6/11;
-  grid-row: 1/6;
-  margin-top: 50px;
-  margin-right: 50px;
-}
-#interior3 {
-  grid-column: 8/11;
-  grid-row: 1/5;
-}
-#interior4 {
-  grid-column: 2/6;
-  grid-row: 6/9;
-  margin-top: 10px;
-}
-#interior5 {
-  grid-column: 7/11;
-  grid-row: 6/11;
-}
-#number {
-  width: 45%;
-}
-#freshlooksoutdiv h1 {
-  font-size: 46px;
-}
-#interior {
-  height: 900px;
-}
-}
-@media screen and (max-width:991px) {
-  .img11, .img12{
+@media screen and (max-width: 1115px) {
+  #bars {
+    cursor: pointer;
+    font-size: 25px;
+    display: inline;
+  }
+  #applogo > i:nth-child(1) {
     display: none;
   }
+  #main {
+    grid-template-columns: repeat(11, 99.5px);
+  }
+  #main1 {
+    grid-column: 1/12;
+  }
   #main3 {
-    grid-column: 3/8;
+    grid-column: 4/10;
+    grid-row: 4/10;
+  }
+  #main2 {
+    grid-column: 6/11;
+    grid-row: 3/11;
+  }
+  #interior1 {
+    grid-column: 2/6;
+    grid-row: 1/6;
+  }
+  #interior2 {
+    grid-column: 6/11;
+    grid-row: 1/6;
+    margin-top: 50px;
+    margin-right: 50px;
+  }
+  #interior3 {
+    grid-column: 8/11;
+    grid-row: 1/5;
+  }
+  #interior4 {
+    grid-column: 2/6;
+    grid-row: 6/9;
+    margin-top: 10px;
+  }
+  #interior5 {
+    grid-column: 7/11;
+    grid-row: 6/11;
+  }
+  #number {
+    width: 45%;
+  }
+  #freshlooksoutdiv h1 {
+    font-size: 46px;
+  }
+  #image1,
+  #image2,
+  #image3 {
+    height: 300px;
+  }
+  #image11,
+  #image12,
+  #image13 {
+    height: 300px;
+  }
+  #contactpart {
+    margin-top: 100px;
+    grid-template-columns: repeat(10, 99px);
+    grid-template-rows: repeat(8, 100px);
+  }
+  .contactpartone {
+    grid-column: 1/14;
+    grid-row: 3/5;
+  }
+  .contactparttwo {
+    grid-column: 5/10;
+    grid-row: 1/8;
+    z-index: -1;
+  }
+  .contactpartthree {
+
+    grid-column: 2/7;
+    grid-row: 2/7;
+ }
+}
+@media screen and (max-width: 991px) {
+  .img11,
+  .img12 {
+    display: none;
+  }
+  #main {
+    grid-template-columns: repeat(9, 100px);
+  }
+  #main1 {
+    grid-column: 1/11;
+  }
+  #main3 {
+    grid-column: 2/8;
     grid-row: 3/9;
   }
   #main2 {
@@ -549,17 +670,303 @@ button:hover {
   #interior5 p {
     padding-top: 0px;
   }
+  #freshlooks {
+    width: 75%;
+  }
   #number {
-    width: 70%;
+    width: 78%;
   }
   #freshlooksoutdiv h1 {
     font-size: 44px;
   }
-  #freshlooksoutdiv {
-    width: 78%;
+  #image1,
+  #image2,
+  #image3 {
+    height: 350px;
+    width: 49%;
   }
-  #images {
-    height: 800px;
-    width: 78%;
+  #image3 {
+    margin-top: 15px;
+  }
+  #Latestprojects {
+    width: 75%;
+  }
+  #wrapImages {
+    flex-direction: column;
+  }
+  #wrapImage1 {
+    width: 100%;
+  }
+  #wrapImage2 {
+    width: 100%;
+  }
+  #wrapimage2 {
+    height: 300px;
+  }
+  #wrapimage3 {
+    height: 500px;
+  }
+  #wrapimage4 {
+    height: 500px;
+    margin-top: 25px;
+  }
+  #wrapimage5 {
+    height: 300px;
+  }
+  #freshlooksoutdiv2 h1 {
+    font-size: 50px;
+  }
+  #image11,
+  #image12,
+  #image13 {
+    height: 350px;
+    width: 49%;
+  }
+  #image13 {
+    margin-top: 15px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .img13 {
+    display: none;
+  }
+  #nav {
+    height: 140px;
+    width: 85%;
+    margin: auto;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 10px 0px;
+  }
+  #cookies {
+    height: 100px;
+    width: 100%;
+    margin: auto;
+    border-radius: 0px;
+    bottom: 0px;
+    left: 0px;
+  }
+  #cookies button {
+    margin-left: 650px;
+    }
+  #main {
+    grid-template-columns: repeat(7, 80px);
+  }
+  #main2 {
+    grid-column: 3/9;
+  }
+  #interior {
+    height: 1700px;
+    grid-template-columns: repeat(8, 94px);
+    grid-template-rows: repeat(18, 100px);
+  }
+  #interior1 {
+    grid-column: 2/8;
+    grid-row: 1/7;
+  }
+  #interior2 {
+    grid-column: 1/7;
+    grid-row: 10/16;
+  }
+  #interior3 {
+    grid-column: 3/8;
+    grid-row: 10/14;
+  }
+  #interior4 {
+    grid-column: 2/8;
+    grid-row: 7/10;
+    margin-top: 10px;
+  }
+  #interior5 {
+    grid-column: 2/8;
+    grid-row: 16/18;
+  }
+  #interior4 h1{
+    font-size: 36px;
+  }
+  #freshlooks {
+    width: 75%;
+  }
+  #number {
+    width: 45%;
+    height: 110px;
+    padding: 20px;
+  }
+  #freshlooksoutdiv h1 {
+    font-size: 36px;
+    margin-left: 20px;
+  }
+  #image1,
+  #image2,
+  #image3 {
+    height: 500px;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  #image3 {
+    margin-top: 0px;
+  }
+  #Latestprojects {
+    width: 75%;
+  }
+  #wrapImages {
+    /* border: 3px solid black; */
+    flex-direction: column;
+  }
+  #wrapimage1 {
+    display: none;
+  }
+  #wrapimage2 {
+    width: 100%;
+    height: 450px;
+  }
+  #wrapimage3 {
+    height: 450px;
+  }
+  #wrapimage4 {
+    height: 450px;
+    margin-top: 25px;
+  }
+  #wrapimage5 {
+    width: 100%;
+    height: 450px;
+  }
+  #wrapimage6 {
+    display: none;
+  }
+  #freshlooksoutdiv2 h1 {
+    font-size: 36px;
+  }
+  #image11,
+  #image12,
+  #image13 {
+    height: 500px;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  #image13 {
+    margin-top: 0px;
+  }
+  #contactpart {
+    margin-top: 100px;
+    height: 705px;
+    width: 100%;
+    /* border: 1px solid black; */
+    display: grid;
+    grid-template-columns: repeat(6, 99px);
+    grid-template-rows: repeat(8, 100px);
+  }
+  .contactpartone {
+    grid-column: 1/9;
+    grid-row: 3/5;
+  }
+  .contactparttwo {
+    grid-column: 4/8;
+    grid-row: 1/8;
+    z-index: -1;
+  }
+  .contactpartthree {
+
+    grid-column: 2/7;
+    grid-row: 2/7;
+ }
+}
+@media screen and (max-width: 575px) {
+  #main {
+    grid-template-columns: repeat(7, 70px);
+  }
+  #main2 {
+    grid-column: 3/7;
+    grid-row: 2/9;
+  }
+  #main3 {
+    grid-column: 2/6;
+    grid-row: 3/8;
+  }
+  .maintext {
+    font-size: 28px;
+  }
+  #interior {
+    height: 1500px;
+    grid-template-columns: repeat(8, 78px);
+    grid-template-rows: repeat(17, 100px);
+  }
+  #interior1 {
+    grid-column: 2/7;
+    grid-row: 1/5;
+  }
+  #interior2 {
+    grid-column: 1/7;
+    grid-row: 8/13;
+  }
+  #interior3 {
+    grid-column: 3/7;
+    grid-row: 8/12;
+  }
+  #interior4 {
+    grid-column: 2/8;
+    grid-row: 5/8;
+    margin-top: 10px;
+  }
+  #interior5 {
+    grid-column: 2/7;
+    grid-row: 13/15;
+  }
+  #freshlooks {
+    width: 65%;
+  }
+  #freshlooksoutdiv {
+    flex-direction: column;
+  }
+  #number {
+    width: 25%;
+    height: 80px;
+    padding: 10px;
+  }
+  #freshlooksoutdiv h1 {
+    margin-top: 20px;
+    font-size: 30px;
+    margin-left: 0px;
+  }
+  #image1,
+  #image2,
+  #image3 {
+    height: 320px;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  #image3 {
+    margin-top: 0px;
+  }
+  #Latestprojects {
+    width: 65%;
+  }
+  #wrapimage2 {
+    height: 300px;
+  }
+  #wrapimage3 {
+    height: 300px;
+  }
+  #wrapimage4 {
+    height: 300px;
+  }
+  #wrapimage5 {
+    height: 300px;
+  }
+  #freshlooksoutdiv2 {
+    flex-direction: column-reverse;
+  }
+  #freshlooksoutdiv2 h1 {
+    font-size: 30px;
+  }
+  #image11,
+  #image12,
+  #image13 {
+    height: 320px;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  #image13 {
+    margin-top: 0px;
   }
 }
